<resources>
    <string name="app_name">Happy Valentine\'s Day</string>
    <string name="card_text1">Roses are&#160;</string>
    <string name="card_text_red">#ff0000</string>
    <string name="comma">,</string>
    <string name="card_text2">Violets are&#160;</string>
    <string name="card_text_blue">#0000ff</string>
    <string name="period">.</string>
    <string name="card_text3">I prefer to use hex codes,</string>
    <string name="card_text4">But I\'d use RGB for you.</string>
    <string name="card_text5">Happy Valentine\'s Day.</string>
    <string name="from_me">Love,</string>
    <string name="my_name">Will</string>
</resources>
